chore: add root prestart/start to install and run backend when platform deploys from repo root

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prestart": "npm --prefix backend ci --omit=dev",
+    "start": "node backend/server.js"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
