--- a/railway.toml
+++ b/railway.toml
@@ -1,6 +1,6 @@
 [build]
 builder = "NIXPACKS"
-buildCommand = "cd Backend && npm install"
+buildCommand = "npm install --prefix Backend"
 
 [deploy]
-startCommand = "cd Backend && npm start"
+startCommand = "npm start --prefix Backend"
