Fix Railway buildDir

--- a/railway.toml
+++ b/railway.toml
@@ -1,6 +1,7 @@
 [build]
 builder = "NIXPACKS"
-buildCommand = "npm install --prefix Backend"
+buildCommand = "cd Backend && npm install"
+buildDir = "Backend"
 
 [deploy]
-startCommand = "npm start --prefix Backend"
+startCommand = "npm start"
