Fix: force Node 18 with Nixpacks

--- a/railway.toml
+++ b/railway.toml
@@ -1,11 +1,6 @@
 [build]
 builder = "NIXPACKS"
+buildDir = "Backend"
 
-[phases.setup]
-nixPkgs = ["nodejs_18"]
-
-[phases.install]
-cmds = ["cd Backend && npm install"]
-
-[start]
-cmd = "cd Backend && npm start"
+[deploy]
+startCommand = "npm start"
