--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,8 @@
 MAIL_USER=
 MAIL_PASS=
 
-# Server port (Render sets PORT automatically)
-PORT=5001
+# Resend API Key (set this in Railway/hosting provider as RESEND_API_KEY)
+RESEND_API_KEY=
+
+# Server port (hosting platforms set PORT automatically)
+PORT=5000
