--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   },
   "keywords": [
     "express",
-    "nodemailer",
-    "api"
+    "api",
+    "tutoring"
   ],
   "author": "",
   "license": "ISC",
